working on register routes and html

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -1,27 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Hello World!</title>
+	<title>LandLordScore User Dashboard</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 </head>
 <body>
-	<p>Welcome to LandLordScore!</p>
-	<p>Ever wanted to know the real truth about your potential new landlord?</p>
-	<p>Ever wanted a place to vent about or celebrate your landlord?</p>
-	<p>Well here's your chance!</p>
-	<button class="js-login-button" href="/api/users/login">Login
-	</button>
-	<button class="js-register-button" onclick="window.location='/api/users/register'">New User? Register Here!
-		
-	</button>
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 	<script type="text/javascript" src="../controllers/index.js"></script>
-
-
 </body>
 </html>
